# masterkey

./: .agile-flow-version  .env.example  .gembaflow-config.json  .gembaflow-overrides  .gembaflow-version  .gitignore  CLAUDE.md  Dockerfile  README.md  UPSTREAM.md  VERSIONING.md  pyproject.toml
.claude/agents/: agile-backlog-prioritizer.md  github-ticket-worker.md  pr-reviewer.md  quality-engineer.md  (+1 more)
app/: config.py  db.py  main.py  templates.py
docs/: DISTRIBUTION.md  GETTING-STARTED.md  LAUNCH-CHECKLIST.md  PATTERN-LIBRARY.md  PRODUCT-REQUIREMENTS.md  PRODUCT-ROADMAP.md  TECHNICAL-ARCHITECTURE.md  UPGRADING.md
scripts/: diagnose-cloudrun.sh  doctor.sh  provision-gcp-project.sh  report-issue.sh  smoke_auth.py  template-sync.sh  template-sync.test.sh  test-dirty-fork.sh  test-upgrade-cycle.sh  verify-bot-permissions.sh
static/: style.css
supabase/: config.toml
templates/: base.html  home.html
tests/: conftest.py  test_auth_callback.py  test_auth_login.py  test_auth_verify.py  test_bionic.py  test_comprehension_generator.py  test_comprehension_toggle.py  test_config.py  test_current_user.py  test_home.py  test_ingestion_split.py  test_metric_aggregate.py  test_passage_close.py  test_passage_migration.py  test_passages_paste.py  test_passages_pdf.py  test_pdf_header_footer.py  test_preference_migration.py  test_preferences.py  test_questions_route.py  test_rate_limit.py  test_reading_defaults.py  test_reading_event_migration.py  test_reading_event_model.py  test_reading_view.py  test_seed_route.py  test_sentry_init.py  test_test_seed_guard.py  test_todos.py
(+92 files in other folders)
