[project]
name = "agile-flow-gcp"
version = "0.1.0"
description = "Agile Flow GCP Edition — FastAPI + Jinja2 + HTMX starter for Cloud Run + Supabase"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.6",
    "email-validator>=2.3.0",
    "anthropic>=0.101.0",
    "pdfplumber>=0.11.9",
    "supabase>=2.27",
    "sentry-sdk[fastapi]>=2.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.11",
    # Test-only PDF writer (BSD-licensed) for building synthetic PDFs with
    # text at known positions — used by tests/test_pdf_header_footer.py to
    # verify header/footer cropping (#169). Never imported by app/, so it is
    # not a runtime dependency and does not touch ADR-003 (pdfplumber-only).
    "reportlab>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
